# GzwOnline

./: README.md
.github/workflows/: release-api.yml
API/: Cargo.toml  README.md
API/migration/: Cargo.toml  category.xlsx  collection.xlsx  photo_album.xlsx
API/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240819_045504_insert_category_data.rs  m20240819_074240_insert_collection_data.rs  m20240819_100811_insert_photo_data.rs
API/src/: lib.rs  macros.rs  main.rs  router.rs
API/src/entities/: category.rs  collection.rs  feedback.rs  mod.rs  photo_album.rs  prelude.rs
API/src/handlers/: category.rs  collection.rs  feedback.rs  index.rs  mod.rs
API/src/types/: api.rs  mod.rs  query.rs
APP/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
APP/src/: App.vue  env.d.ts  main.ts  manifest.json  pages.json  uni.scss
APP/src/@types/: category.ts  collection.ts  feedback.ts  query.ts
APP/src/api/: category.ts  collection.ts  feedback.ts
APP/src/common/: songti.css
APP/src/components/: CollectionCell.vue  infoCell.vue
APP/src/pages/: cate.vue  detail.vue  game.ts  game.vue  inde.vue  info.vue  init.vue  search.vue  webview.vue
APP/src/stores/: GlobalData.ts  index.ts
APP/src/utils/: TsRequests.ts  index.ts  infoList.ts  requests.ts
