[workspace]
members = [".", "migration"]

[package]
name = "api"
version = "1.0.0"
edition = "2021"

[dependencies]

# 环境变量
dotenv = "0.15.0"

# 输出颜色
colored = "2.1.0"


axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }


# orm
migration = { path = "./migration" }
sea-orm = { version = "1.0.0", features = [
    "macros",
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.0.0", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

# 序列化
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"


# 中间件
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "request-id",
    "timeout",
    "trace",
    "util",
    "cors",
    "fs",
] }


# 日志
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
